fixed the spacing of mjx-containers

--- a/renaissance/css/themes/LD/common.css
+++ b/renaissance/css/themes/LD/common.css
@@ -23,6 +23,10 @@ object[role="img"] {
     }
 }
 
+mjx-container[display="true"] {
+    margin: 0.5em 0 !important;
+}
+
 ul {
     list-style-type: "▫️";
 }
